@@ -13,7 +13,8 @@ CURRENT
   * Add uid and gid options,
   * Add new server.list function,
   * Add rules system,
-  * Add logger.logf, logger.warnf, logger.debug[f].
+  * Add logger.debug,
+  * Add fs.separator.
 
 1.1.4 March 28, 2014
 ---------------------------------------
